fix: improve logo overlap

--- a/docs/public/index.css
+++ b/docs/public/index.css
@@ -439,8 +439,8 @@ h2.heading {
 }
 
 .logo a {
-  padding: 0.5em;
-  margin: -0.5em -0.75em;
+  padding: 0.5em 0.25em;
+  margin: -0.5em -0.5em;
 }
 
 .logo svg {
